--- a/docs/docs/push/docker.mdx
+++ b/docs/docs/push/docker.mdx
@@ -7,7 +7,7 @@ description: Push image to sigma
 
 ### Push single image to sigma
 
-``` sh
+``` bash
 docker pull redis:7
 docker tag redis:7 127.0.0.1:3000/library/redis:7
 docker push 127.0.0.1:3000/library/redis:7
@@ -24,7 +24,7 @@ Create 'buildkit.toml' with content:
 
 Create buildx instance:
 
-``` sh
+``` bash
 docker buildx create --use --config ./buildkit.toml
 ```
 
@@ -36,6 +36,6 @@ FROM alpine:3.18
 
 Push multiarch image to sigma:
 
-``` sh
+``` bash
 docker buildx build --platform linux/amd64,linux/arm64 --tag 10.3.201.221:3000/library/alpine:3.18.0 --file alpine.Dockerfile --push .
 ```
