:sparkles: Design docs start page

--- a/docs/docs/quickstart.mdx
+++ b/docs/docs/quickstart.mdx
@@ -24,7 +24,7 @@ docker run --name sigma -v /home/admin/config:/etc/sigma \
 
 That's enough, now you got a service like docker hub or harbor.
 
-Push image to sigma.
+### Push image to sigma
 
 ``` bash
 docker pull redis:7
