--- a/docs/docs/configuration.mdx
+++ b/docs/docs/configuration.mdx
@@ -81,8 +81,9 @@ http:
   internalEndpoint:
   tls:
     enabled: false
-    certificate: ./conf/sigma.test.io.crt
-    key: ./conf/sigma.test.io.key
+    certificate: /etc/sigma/sigma.tosone.cn.crt
+    key: /etc/sigma/sigma.tosone.cn.key
+
 storage:
   rootdirectory: ./storage
   type: filesystem
@@ -95,6 +96,7 @@ storage:
     region: cn-north-1
     bucket: sigma
     forcePathStyle: true
+
 # Notice: the tag never update after the first pulled from remote registry, unless you delete the image and pull again.
 proxy:
   enabled: false
