:bug: Fix docs build

--- a/docs/blog/2023-12-26-introduction.mdx
+++ b/docs/blog/2023-12-26-introduction.mdx
@@ -1,5 +1,5 @@
 ---
-slug: Sigma is coming! Harbor is outdating?
+slug: introduction
 title: Sigma is coming! Harbor is outdating?
 authors: [tosone]
 ---
