:sparkles: Update config

--- a/docs/docs/configuration.mdx
+++ b/docs/docs/configuration.mdx
@@ -16,16 +16,16 @@ database:
   mysql:
     host: localhost
     port: 3306
-    user: sigma
+    username: sigma
     password: sigma
-    dbname: sigma
+    database: sigma
   postgresql:
     host: localhost
     port: 5432
-    user: sigma
+    username: sigma
     password: sigma
-    dbname: sigma
-    sslmode: disable
+    database: sigma
+    sslMode: disable
 
 redis:
   # redis type available: none, external. Following all of redis config just use reference here.
