:pencil: Update docs

--- a/docs/blog/2023-12-26-introduction.mdx
+++ b/docs/blog/2023-12-26-introduction.mdx
@@ -4,7 +4,10 @@ title: Sigma is coming! Harbor is outdating?
 authors: [tosone]
 ---
 
+
 In the era of cloud-native, where the majority of software artifacts have transitioned from the software itself to OCI-Native images, the OCI-Native image registry has become an indispensable component in most DevOps systems. This shift has reduced the complexity of artifact delivery and allowed for better management of artifacts and their versions from a role-based permission perspective. Moreover, it emphasizes the security of artifact delivery and sets requirements for the speed of container deployment in relation to the image registry.
+
+<!-- truncate -->
 
 ## Why develop sigma?
 
